@@ -65,17 +65,19 @@ class Sys::FileTest {
 
     my $stat = Sys::IO::Stat->new;
 
-    Sys::IO::Stat->stat($file, $stat);
+    my $status = Sys::IO::Stat->stat_raw($file, $stat);
 
     my $ok = 0;
-    if (Sys->defined("_WIN32")) {
-      if ($stat->st_uid == 0) {
-        $ok = 1;
+    unless ($status == -1) {
+      if (Sys->defined("_WIN32")) {
+        if ($stat->st_uid == 0) {
+          $ok = 1;
+        }
       }
-    }
-    else {
-      if ($stat->st_uid == Sys::User->getuid) {
-        $ok = 1;
+      else {
+        if ($stat->st_uid == Sys::User->getuid) {
+          $ok = 1;
+        }
       }
     }
     
